--- a/index.html
+++ b/index.html
@@ -1,40 +1,341 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Interactive Arithmetic Textbook</title>
 
-<!-- jsPDF for certificate generation -->
+<!-- jsPDF for certificate -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
 <style>
+  :root {
+    --primary: #0078d7;
+    --accent: #00b4d8;
+    --light-bg: #f0f8ff;
+    --card-bg: #ffffff;
+  }
+
   body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
-    background: #f0f8ff;
+    background: var(--light-bg);
     color: #222;
+    line-height: 1.5;
   }
 
   header {
-    background: linear-gradient(to right, #0078d7, #00b4d8);
+    background: linear-gradient(to right, var(--primary), var(--accent));
     color: white;
     text-align: center;
-    padding: 15px;
-    font-size: 3.5em;
+    padding: 1rem;
+    font-size: clamp(1.2rem, 4vw, 1.8rem);
     font-weight: 600;
   }
 
   main {
-    padding: 20px;
+    padding: 1rem;
     max-width: 900px;
     margin: auto;
   }
 
   .chapter {
-    background: white;
+    background: var(--card-bg);
     border-radius: 12px;
-    padding: 20px;
+    padding: clamp(1rem, 4vw, 1.5rem);
+    margin-bottom: 1.5rem;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  }
+
+  h2, h3 {
+    color: var(--primary);
+    font-size: clamp(1.2rem, 4vw, 1.6rem);
+  }
+
+  p, input, button {
+    font-size: clamp(0.9rem, 3vw, 1.1rem);
+  }
+
+  button {
+    background: var(--primary);
+    color: white;
+    border: none;
+    padding: 0.6rem 1.2rem;
+    border-radius: 8px;
+    cursor: pointer;
+    font-weight: 500;
+    margin-top: 0.6rem;
+  }
+
+  button:hover { background: #005fa3; }
+
+  input {
+    padding: 0.6rem;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    width: 90%;
+    margin-top: 0.4rem;
+  }
+
+  .example-box {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin: 10px 0;
+    flex-wrap: wrap;
+  }
+
+  .number-box {
+    background: #ffeb3b;
+    padding: clamp(0.6rem, 3vw, 1rem);
+    border-radius: 10px;
+    font-size: clamp(1.2rem, 5vw, 1.5rem);
+    width: clamp(50px, 20vw, 70px);
+    text-align: center;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    transition: transform 0.3s;
+  }
+
+  .drop-zone {
+    border: 2px dashed #888;
+    padding: 1rem;
+    text-align: center;
+    border-radius: 8px;
+    min-height: 50px;
+    margin-top: 10px;
+    background: #f9f9f9;
+  }
+
+  .practice, .challenge {
+    margin-top: 1.5rem;
+    padding: 1rem;
+    border-radius: 10px;
+    background: #e0f7fa;
+  }
+
+  .timer {
+    font-weight: bold;
+    font-size: clamp(1rem, 3vw, 1.1rem);
+    color: #d32f2f;
+  }
+
+  .progress {
+    background: #ddd;
+    border-radius: 20px;
+    overflow: hidden;
+    margin-top: 10px;
+  }
+
+  .progress-bar {
+    height: 20px;
+    width: 0%;
+    background: #4caf50;
+    text-align: center;
+    color: white;
+    font-size: 0.8em;
+  }
+
+  @media (max-width: 500px) {
+    .number-box {
+      width: 50px;
+      font-size: 1.1rem;
+    }
+    button {
+      width: 100%;
+    }
+  }
+</style>
+</head>
+
+<body>
+<header>🧮 Interactive Arithmetic Textbook</header>
+  <h2><center>Splendoe Team VBB 2025-26</center></h2>
+  <h3><center>AGMHSS Patteeswaram </center></h3>
+<main>
+  <section id="intro" class="chapter">
+    <h2>Welcome!</h2>
+    <p>This interactive textbook helps you master arithmetic through fun examples and exercises.</p>
+    <p><strong>Enter your name to begin:</strong></p>
+    <input type="text" id="studentName" placeholder="Enter your full name" />
+    <br>
+    <button onclick="startLesson('addition')">Start Chapter 1: Addition ➕</button>
+  </section>
+
+  <section id="lesson" class="chapter" style="display:none;">
+    <h2 id="lesson-title">Chapter 1: Addition</h2>
+    <p>
+      Addition means joining two or more numbers to find the total.  
+      For example, <strong>3 + 2 = 5</strong> means you had 3 objects and got 2 more.
+    </p>
+
+    <h3>🔹 Visual Example</h3>
+    <div class="example-box">
+      <div class="number-box">🍎🍎🍎</div>
+      <div class="number-box">+</div>
+      <div class="number-box">🍎🍎</div>
+      <div class="number-box">=</div>
+      <div class="number-box">🍎🍎🍎🍎🍎</div>
+    </div>
+    <p>3 apples + 2 apples = 5 apples</p>
+
+    <h3>🔹 Try it yourself!</h3>
+    <div class="example-box">
+      <div class="number-box" draggable="true" ondragstart="drag(event)" id="num1">4</div>
+      <div class="number-box" draggable="true" ondragstart="drag(event)" id="num2">7</div>
+    </div>
+    <div class="drop-zone" ondrop="drop(event)" ondragover="allowDrop(event)">Drop numbers here 👇</div>
+    <p id="sumResult"></p>
+
+    <div class="practice">
+      <h3>🧩 Quick Practice</h3>
+      <p id="practiceQ"></p>
+      <input type="number" id="practiceA" placeholder="Type your answer" />
+      <button onclick="checkPractice()">Check</button>
+      <p id="practiceFeedback"></p>
+      <button onclick="newPractice()">Next Question</button>
+    </div>
+
+    <div class="challenge">
+      <h3>⚡ 30-Second Challenge!</h3>
+      <p id="challengeQ">Press Start to begin.</p>
+      <input type="number" id="challengeA" placeholder="Your answer" />
+      <button onclick="checkChallenge()">Submit</button>
+      <p id="challengeFeedback"></p>
+      <p class="timer" id="timer">Time: 30s</p>
+      <button onclick="startChallenge()">Start Challenge</button>
+    </div>
+
+    <button onclick="startQuiz()">Start Final Quiz ➡️</button>
+  </section>
+
+  <section id="quiz" class="chapter" style="display:none;">
+    <h2>Quiz: Test Your Skills</h2>
+    <div id="quiz-container"></div>
+    <div class="progress"><div class="progress-bar" id="progress-bar">0%</div></div>
+  </section>
+</main>
+
+<script>
+let score = 0, questionCount = 0, studentName = "";
+
+function startLesson() {
+  studentName = document.getElementById("studentName").value.trim();
+  if (!studentName) { alert("Please enter your name!"); return; }
+  document.getElementById("intro").style.display = "none";
+  document.getElementById("lesson").style.display = "block";
+  newPractice();
+}
+
+function allowDrop(ev){ ev.preventDefault(); }
+function drag(ev){ ev.dataTransfer.setData("text", ev.target.id); }
+function drop(ev){
+  ev.preventDefault();
+  const n1 = parseInt(document.getElementById("num1").innerText);
+  const n2 = parseInt(document.getElementById("num2").innerText);
+  document.getElementById("sumResult").innerText = `✅ ${n1} + ${n2} = ${n1 + n2}`;
+}
+
+let a,b;
+function newPractice(){
+  a = Math.floor(Math.random()*10)+1;
+  b = Math.floor(Math.random()*10)+1;
+  document.getElementById("practiceQ").innerText = `What is ${a} + ${b}?`;
+  document.getElementById("practiceA").value="";
+  document.getElementById("practiceFeedback").innerText="";
+}
+function checkPractice(){
+  const ans = parseInt(document.getElementById("practiceA").value);
+  document.getElementById("practiceFeedback").innerText =
+    ans===a+b ? "🎉 Correct!" : `❌ Try again. (${a+b})`;
+}
+
+let cA,cB,challengeScore=0,time=30,timerInt;
+function startChallenge(){
+  challengeScore=0;time=30;
+  nextChallenge();
+  clearInterval(timerInt);
+  timerInt=setInterval(()=>{
+    time--;
+    document.getElementById("timer").innerText=`Time: ${time}s`;
+    if(time<=0){clearInterval(timerInt);
+      document.getElementById("challengeFeedback").innerText=`Time’s up! Score: ${challengeScore}`;
+      document.getElementById("challengeQ").innerText="Challenge Over!";
+    }
+  },1000);
+}
+function nextChallenge(){
+  cA=Math.floor(Math.random()*20);
+  cB=Math.floor(Math.random()*20);
+  document.getElementById("challengeQ").innerText=`What is ${cA} + ${cB}?`;
+  document.getElementById("challengeA").value="";
+}
+function checkChallenge(){
+  const ans=parseInt(document.getElementById("challengeA").value);
+  if(time<=0)return;
+  if(ans===cA+cB){challengeScore++;
+    document.getElementById("challengeFeedback").innerText="✅ Correct!";
+  } else {
+    document.getElementById("challengeFeedback").innerText=`❌ ${cA+cB} was correct.`;
+  }
+  nextChallenge();
+}
+
+function startQuiz(){
+  document.getElementById("lesson").style.display="none";
+  document.getElementById("quiz").style.display="block";
+  score=0;questionCount=0;
+  nextQuestion();
+}
+
+function nextQuestion(){
+  if(questionCount>=5){showResult();return;}
+  const a=Math.floor(Math.random()*20);
+  const b=Math.floor(Math.random()*20);
+  const correct=a+b;
+  questionCount++;
+  document.getElementById("quiz-container").innerHTML=`
+    <p><strong>Question ${questionCount}:</strong> What is ${a}+${b}?</p>
+    <input type="number" id="userAnswer" placeholder="Enter answer" />
+    <button onclick="checkAnswer(${correct})">Submit</button>`;
+}
+function checkAnswer(correct){
+  const ans=parseInt(document.getElementById("userAnswer").value);
+  if(ans===correct)score++;
+  const prog=(questionCount/5)*100;
+  document.getElementById("progress-bar").style.width=prog+"%";
+  document.getElementById("progress-bar").textContent=Math.round(prog)+"%";
+  nextQuestion();
+}
+function showResult(){
+  document.getElementById("quiz-container").innerHTML=`
+    <h3>🎉 Great job, ${studentName}!</h3>
+    <p>Your final score: <strong>${score}/5</strong></p>
+    <button onclick="downloadCertificate()">🎓 Download Certificate</button>
+    <br><br><button onclick="location.reload()">Restart</button>`;
+  document.getElementById("progress-bar").style.width="100%";
+  document.getElementById("progress-bar").textContent="100%";
+}
+
+function downloadCertificate(){
+  const { jsPDF } = window.jspdf;
+  const doc = new jsPDF({ orientation:"landscape" });
+  doc.setDrawColor(0,128,255); doc.setLineWidth(8);
+  doc.rect(10,10,270,190);
+  doc.setFont("helvetica","bold"); doc.setFontSize(28);
+  doc.text("Certificate of Achievement",70,50);
+  doc.setFontSize(20);
+  doc.text(`Awarded to ${studentName}`,70,80);
+  doc.setFontSize(16);
+  doc.text(`for successfully completing Chapter 1: Addition`,60,100);
+  doc.text(`with a final score of ${score} out of 5.`,70,115);
+  doc.setFontSize(12);
+  doc.text(`Date: ${new Date().toLocaleDateString()}`,40,160);
+  doc.text(`Signature: ___________________`,200,160);
+  doc.save(`${studentName}_Certificate.pdf`);
+}
+</script>
+</body>
+</html>    padding: 20px;
     margin-bottom: 25px;
     box-shadow: 0 4px 10px rgba(0,0,0,0.1);
   }
@@ -366,3 +667,4 @@ function downloadCertificate() {
 </script>
 </body>
 </html>
+
