--- a/index.html
+++ b/index.html
@@ -14,20 +14,19 @@
     margin: 0;
     background: #f0f8ff;
     color: #222;
-    font-size: 1rem;
   }
 
   header {
     background: linear-gradient(to right, #0078d7, #00b4d8);
     color: white;
     text-align: center;
-    padding: 12px;
-    font-size: 1.2em;
+    padding: 15px;
+    font-size: 2.5em;
     font-weight: 600;
   }
 
   main {
-    padding: 10px;
+    padding: 20px;
     max-width: 900px;
     margin: auto;
   }
@@ -35,6 +34,362 @@
   .chapter {
     background: white;
     border-radius: 12px;
+    padding: 20px;
+    margin-bottom: 25px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  }
+
+  button {
+    background: #0078d7;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 1em;
+    margin-top: 10px;
+  }
+  button:hover { background: #005fa3; }
+
+  input {
+    padding: 8px;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    width: 80%;
+    margin-top: 5px;
+  }
+
+  .example-box {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    margin: 10px 0;
+    flex-wrap: wrap;
+  }
+
+  .number-box {
+    background.number-box {
+    background: #ffeb3b;
+    padding: 15px;
+    border-radius: 10px;
+    font-size: 1.5em;
+    width: 70px;
+    text-align: center;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    transition: transform 0.3s;
+  }
+
+  .number-box:active {
+    transform: scale(1.1);
+  }
+
+  .drop-zone {
+    border: 2px dashed #888;
+    padding: 15px;
+    text-align: center;
+    border-radius: 8px;
+    min-height: 50px;
+    margin-top: 10px;
+  }
+
+  .practice, .challenge {
+    margin-top: 20px;
+    padding: 15px;
+    border-radius: 10px;
+    background: #e0f7fa;
+  }
+
+  .timer {
+    font-weight: bold;
+    font-size: 1.1em;
+    color: #d32f2f;
+  }
+
+  .progress {
+    background: #ddd;
+    border-radius: 20px;
+    overflow: hidden;
+    margin-top: 10px;
+  }
+
+  .progress-bar {
+    height: 20px;
+    width: 0%;
+    background: #4caf50;
+    text-align: center;
+    color: white;
+    font-size: 0.8em;
+  }
+
+  @media (max-width: 600px) {
+    body { font-size: 1em; }
+    header { font-size: 1.2em; }
+  }
+</style>
+</head>
+
+<body>
+<header>🧮 Interactive Arithmetic Textbook</header>
+<h1><center>Splendoe Team,VBB 2025-26</center></h1>
+  <h2><center>AGMHSS Patteeswaram </center></h2>
+<main>
+  <!-- Intro -->
+  <section id="intro" class="chapter">
+    <h2>Welcome!</h2>
+    <p>This interactive textbook helps you master arithmetic through fun examples and exercises.</p>
+    <p><strong>Enter your name to begin:</strong></p>
+    <input type="text" id="studentName" placeholder="Enter your full name" />
+    <br><br>
+    <button onclick="startLesson('addition')">Start Chapter 1: Addition ➕</button>
+  </section>
+
+  <!-- Lesson -->
+  <section id="lesson" class="chapter" style="display:none;">
+    <h2 id="lesson-title">Chapter 1: Addition</h2>
+    <p>
+      Addition means joining two or more numbers to find the total.  
+      For example, <strong>3 + 2 = 5</strong> means you had 3 objects and got 2 more.
+    </p>
+
+    <!-- Animated Example -->
+    <h3>🔹 Visual Example</h3>
+    <div class="example-box">
+      <div class="number-box" id="apple1">🍎🍎🍎</div>
+      <div class="number-box">+</div>
+      <div class="number-box" id="apple2">🍎🍎</div>
+      <div class="number-box">=</div>
+      <div class="number-box" id="apple3">🍎🍎🍎🍎🍎</div>
+    </div>
+    <p>3 apples + 2 apples = 5 apples</p>
+
+    <!-- Drag and Drop -->
+    <h3>🔹 Try it yourself!</h3>
+    <p>Drag both numbers into the box to see their sum:</p>
+    <div class="example-box">
+      <div class="number-box" draggable="true" ondragstart="drag(event)" id="num1">4</div>
+      <div class="number-box" draggable="true" ondragstart="drag(event)" id="num2">7</div>
+    </div>
+    <div class="drop-zone" ondrop="drop(event)" ondragover="allowDrop(event)">
+      Drop numbers here 👇
+    </div>
+    <p id="sumResult"></p>
+
+    <!-- Quick Practice -->
+    <div class="practice">
+      <h3>🧩 Quick Practice</h3>
+      <p id="practiceQ"></p>
+      <input type="number" id="practiceA" placeholder="Type your answer" />
+      <button onclick="checkPractice()">Check</button>
+      <p id="practiceFeedback"></p>
+      <button onclick="newPractice()">Next Question</button>
+    </div>
+
+    <!-- Challenge Game -->
+    <div class="challenge">
+      <h3>⚡ 30-Second Challenge!</h3>
+      <p>Answer as many as you can before time runs out!</p>
+      <p id="challengeQ">Press Start to begin.</p>
+      <input type="number" id="challengeA" placeholder="Your answer" />
+      <button onclick="checkChallenge()">Submit</button>
+      <p id="challengeFeedback"></p>
+      <p class="timer" id="timer">Time: 30s</p>
+      <button onclick="startChallenge()">Start Challenge</button>
+    </div>
+
+    <button onclick="startQuiz()">Start Final Quiz ➡️</button>
+  </section>
+
+  <!-- Quiz -->
+  <section id="quiz" class="chapter" style="display:none;">
+    <h2>Quiz: Test Your Skills</h2>
+    <div id="quiz-container"></div>
+    <div class="progress">
+      <div class="progress-bar" id="progress-bar">0%</div>
+    </div>
+  </section>
+</main>
+
+<script>
+let score = 0;
+let questionCount = 0;
+let studentName = "";
+
+// ----- LESSON START -----
+function startLesson(type) {
+  studentName = document.getElementById("studentName").value.trim();
+  if (!studentName) {
+    alert("Please enter your name before starting.");
+    return;
+  }
+  document.getElementById("intro").style.display = "none";
+  document.getElementById("lesson").style.display = "block";
+  newPractice();
+}
+
+// ----- DRAG & DROP -----
+function allowDrop(ev) { ev.preventDefault(); }
+function drag(ev) { ev.dataTransfer.setData("text", ev.target.id); }
+
+function drop(ev) {
+  ev.preventDefault();
+  const num1 = parseInt(document.getElementById("num1").innerText);
+  const num2 = parseInt(document.getElementById("num2").innerText);
+  const sum = num1 + num2;
+  document.getElementById("sumResult").innerText = `✅ ${num1} + ${num2} = ${sum}`;
+}
+
+// ----- PRACTICE -----
+let a, b;
+function newPractice() {
+  a = Math.floor(Math.random() * 10) + 1;
+  b = Math.floor(Math.random() * 10) + 1;
+  document.getElementById("practiceQ").innerText = `What is ${a} + ${b}?`;
+  document.getElementById("practiceA").value = "";
+  document.getElementById("practiceFeedback").innerText = "";
+}
+
+function checkPractice() {
+  const ans = parseInt(document.getElementById("practiceA").value);
+  if (ans === a + b) {
+    document.getElementById("practiceFeedback").innerText = "🎉 Correct!";
+  } else {
+    document.getElementById("practiceFeedback").innerText = `❌ Try again. The answer is ${a + b}.`;
+  }
+}
+
+// ----- CHALLENGE -----
+let challengeScore = 0, timer = 30, cA, cB, timerInterval;
+function startChallenge() {
+  challengeScore = 0;
+  timer = 30;
+  nextChallenge();
+  clearInterval(timerInterval);
+  timerInterval = setInterval(() => {
+    timer--;
+    document.getElementById("timer").innerText = `Time: ${timer}s`;
+    if (timer <= 0) {
+      clearInterval(timerInterval);
+      document.getElementById("challengeFeedback").innerText =
+        `Time’s up! You got ${challengeScore} correct.`;
+      document.getElementById("challengeQ").innerText = "Challenge Over!";
+    }
+  }, 1000);
+}
+
+function nextChallenge() {
+  cA = Math.floor(Math.random() * 20);
+  cB = Math.floor(Math.random() * 20);
+  document.getElementById("challengeQ").innerText = `What is ${cA} + ${cB}?`;
+  document.getElementById("challengeA").value = "";
+}
+
+function checkChallenge() {
+  const ans = parseInt(document.getElementById("challengeA").value);
+  if (timer <= 0) return;
+  if (ans === cA + cB) {
+    challengeScore++;
+    document.getElementById("challengeFeedback").innerText = "✅ Correct!";
+  } else {
+    document.getElementById("challengeFeedback").innerText = `❌ ${cA + cB} was correct.`;
+  }
+  nextChallenge();
+}
+
+// ----- QUIZ -----
+function startQuiz() {
+  document.getElementById("lesson").style.display = "none";
+  document.getElementById("quiz").style.display = "block";
+  score = 0;
+  questionCount = 0;
+  nextQuestion();
+}
+
+function nextQuestion() {
+  if (questionCount >= 5) { showResult(); return; }
+  const a = Math.floor(Math.random() * 20);
+  const b = Math.floor(Math.random() * 20);
+  const correctAnswer = a + b;
+  questionCount++;
+  document.getElementById("quiz-container").innerHTML = `
+    <div class="question">
+      <p><strong>Question ${questionCount}:</strong> What is ${a} + ${b}?</p>
+      <input type="number" id="userAnswer" placeholder="Enter answer" />
+      <button onclick="checkAnswer(${correctAnswer})">Submit</button>
+    </div>`;
+}
+
+function checkAnswer(correctAnswer) {
+  const userAnswer = parseInt(document.getElementById("userAnswer").value);
+  if (userAnswer === correctAnswer) { alert("✅ Correct!"); score++; }
+  else { alert("❌ Incorrect. The correct answer is " + correctAnswer); }
+
+  const progress = (questionCount / 5) * 100;
+  const bar = document.getElementById("progress-bar");
+  bar.style.width = progress + "%";
+  bar.textContent = Math.round(progress) + "%";
+  nextQuestion();
+}
+
+function showResult() {
+  document.getElementById("quiz-container").innerHTML = `
+    <h3>🎉 Great job, ${studentName}!</h3>
+    <p>You completed Chapter 1: Addition.</p>
+    <p>Your final score: <strong>${score} / 5</strong></p>
+    <button onclick="downloadCertificate()">🎓 Download Certificate</button>
+    <br><br>
+    <button onclick="location.reload()">Restart</button>`;
+  document.getElementById("progress-bar").style.width = "100%";
+  document.getElementById("progress-bar").textContent = "100%";
+}
+
+// ----- CERTIFICATE -----
+function downloadCertificate() {
+  const { jsPDF } = window.jspdf;
+  const doc = new jsPDF({ orientation: "landscape" });
+
+  // Border
+  doc.setDrawColor(0, 128, 255);
+  doc.setLineWidth(10);
+  doc.rect(10, 10, 270, 190);
+
+  // Background
+  doc.setFillColor(240, 248, 255);
+  doc.rect(20, 20, 250, 170, "F");
+
+  // Title
+  doc.setFont("helvetica", "bold");
+  doc.setFontSize(28);
+  doc.setTextColor(0, 51, 102);
+  doc.text("Certificate of Achievement", 70, 50);
+
+  // Student name
+  doc.setFontSize(20);
+  doc.setTextColor(0, 0, 0);
+  doc.text("Awarded to:", 50, 80);
+  doc.setFont("helvetica", "bold");
+  doc.setFontSize(24);
+  doc.text(studentName, 110, 80);
+
+  // Body
+  doc.setFont("helvetica", "normal");
+  doc.setFontSize(16);
+  doc.text(`for successfully completing`, 100, 100);
+  doc.text(`Chapter 1: Addition`, 110, 115);
+  doc.text(`with a final score of ${score} out of 5.`, 95, 130);
+
+  // Footer
+  doc.setFontSize(12);
+  doc.text(`Date: ${new Date().toLocaleDateString()}`, 40, 160);
+  doc.text(`Signature: ______________________`, 200, 160);
+  doc.setTextColor(0, 128, 255);
+  doc.setFontSize(14);
+  doc.text("Keep learning and shining! 🌟", 110, 180);
+
+  doc.save(`${studentName}_Certificate.pdf`);
+}
+</script>
+</body>
+</html>    border-radius: 12px;
     padding: 20px;
     margin-bottom: 25px;
     box-shadow: 0 4px 10px rgba(0,0,0,0.1);
@@ -892,5 +1247,6 @@ function downloadCertificate() {
 </script>
 </body>
 </html>
+
 
 
