--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </style>
 </head>
 <body class="theme-add">
-<header>📘 Interactive Arithmetic Textbook</header>
+<header>📘 Splendoe Arithmetic-Quiz </header>
 <main>
   <!-- Intro (Home) -->
   <section id="intro" class="chapter">
@@ -466,3 +466,4 @@ function downloadCertificate(){
 </script>
 </body>
 </html>
+
